tests/a1/for_testing/bad6.mit
// error: line 10: incorrect identifier 1n
fibonacci = fun(n){
                if(n == 1){return 1;}
                if (n == 2){return 2;}
                print(n);
                return fibonacci(n -1) + fibonacci(n - 2);
            };

1n = 10;
n2 = 11;
return fibonacci(n1) + fibonacci(n2) == fibonacci(12);
